# django-auto-prefetch

./: .pre-commit-config.yaml  CHANGELOG.rst  README.rst  pyproject.toml
.github/workflows/: main.yml
src/auto_prefetch/: __init__.py
tests/: models.py  settings.py  test_basic.py  test_edge_cases.py  test_settings.py
